generate/testdata/errors/InvalidScalar.go
package errors

const _ = `# @genqlient
	query InvalidScalar { f }
`
